Downloads for EoL releases, checksums for downloads

--- a/data/mirrors.yml
+++ b/data/mirrors.yml
@@ -1,3 +1,5 @@
+checksums: https://cdimages.ubuntu.com/xubuntu/releases/VER/release/SHA256SUMS
+
 servers:
   - name: AARnet Pty Ltd
     country: Australia
